--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Github">
-        <activity android:name=".view.ReposListActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.UserActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.FollowersList">
+
+        </activity>
+        <activity android:name=".view.ReposListActivity" />
+        <activity android:name=".view.MainActivity"/>
     </application>
 
 </manifest>
